--- a/header.html
+++ b/header.html
@@ -37,6 +37,90 @@
                                 <p class="nav-link" id="plus">+</p>
                             </div>
 
+                            <ul class="drop-items">
+
+                                <div class="yamm-content">
+                                    <div class="row">
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                            <ul>
+                                                <li><a href="./root-canal-treatment.html"><i
+                                                            class="fa fa-angle-right"></i>Root Canal Treatment</a>
+                                                </li>
+                                                <li><a href="./fixed-teeth-crown-and-bridge.html"><i
+                                                            class="fa fa-angle-right"></i>Fixed Teeth Crown And
+                                                        Bridge</a></li>
+                                                <li><a href="./full-and-partial-Dentures.html"><i
+                                                            class="fa fa-angle-right"></i>Full And Partial
+                                                        Dentures</a></li>
+                                                <li><a href="./dental-implants.html"><i
+                                                            class="fa fa-angle-right"></i>Dental Implants</a></li>
+                                                <li><a href="./teeth-cleaning-scaling-and-polishing.html"><i
+                                                            class="fa fa-angle-right"></i>Teeth Cleaning (Scaling)
+                                                        And Polishing</a></li>
+                                                <li><a href="./teeth-whitening.html"><i
+                                                            class="fa fa-angle-right"></i>Teeth Whitening (
+                                                        Bleaching )</a></li>
+                                                <li><a href="./pediatric-dental-care.html"><i
+                                                            class="fa fa-angle-right"></i>Pediatric Dental Care</a>
+                                                </li>
+                                                <li><a href="./pregnancy-guidance.html"><i
+                                                    class="fa fa-angle-right"></i>Pregnancy guidance</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                            <ul>
+                                                
+                                                <li><a href="./infant-dental-checkup.html"><i
+                                                            class="fa fa-angle-right"></i>Infant Dental Checkup </a>
+                                                </li>
+                                                <li><a href="./orthodental&Alignerstreatment.html"><i
+                                                            class="fa fa-angle-right"></i>Orthodontics Dental & Aligners
+                                                        Treatment</a></li>
+                                                <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
+                                                            class="fa fa-angle-right"></i>Aesthetic and Cosmetic
+                                                        Dental Treatment </a></li>
+                                                <li><a href="./tooth-colored-filling.html"><i
+                                                            class="fa fa-angle-right"></i>Tooth Colored Filling</a>
+                                                </li>
+                                                <li><a href="./maxillo-facial-surgery.html"><i
+                                                            class="fa fa-angle-right"></i>Maxillo-Facial Surgery</a>
+                                                </li>
+                                                <li><a href="./tmj-disorder-treatment.html"><i
+                                                            class="fa fa-angle-right"></i>Tmj Disorder Treatment</a>
+                                                </li>
+                                                <li><a href="./habit-correction.html"><i
+                                                    class="fa fa-angle-right"></i>Habit Correction</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                            <ul>
+                                               
+                                                <li><a href="./preventive-dental-care.html"><i
+                                                            class="fa fa-angle-right"></i>Preventive Dental Care</a>
+                                                </li>
+                                                <li><a href="./management-of-dental-traumatic-Injuries.html"><i
+                                                            class="fa fa-angle-right"></i>Management of Dental
+                                                        Traumatic Injuries</a></li>
+                                                <li><a href="./dental-management.html"><i
+                                                            class="fa fa-angle-right"></i>Dental management</a></li>
+                                                <li><a href="./composite-fillings-and-veneers.html"><i
+                                                            class="fa fa-angle-right"></i>Composite fillings and
+                                                        veneers</a></li>
+                                                <li><a href="./smile-designing.html"><i
+                                                            class="fa fa-angle-right"></i>Smile Designing</a></li>
+                                                <li><a href="./orthopantomogram.html"><i
+                                                            class="fa fa-angle-right"></i>Orthopantomogram</a></li>
+                                                <li><a href="./lasertreatment.html"><i 
+                                                            class="fa fa-angle-right"></i>
+                                                                Laser Treatment</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </ul>
+
                             <!-- <li><a href="./services/dentalconsultation.html">Denatl Consultation</a></li>
                                 <li><a href="./services/laser-dentistry.html">Laser Dentistry</a></li> -->
 
