--- a/fixed-teeth-crown-and-bridge.html
+++ b/fixed-teeth-crown-and-bridge.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3 text-capitalize">fixed teeth crown and bridge treatment in beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">fixed teeth crown and bridge treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -36,7 +36,7 @@
                     <div class="treatment-content">
                         <p>A 'Dental Crown 'or "cap" is a fixed prosthetic device, used to entirely cover a damaged teeth, to provide strength to the damaged teeth, improving its appearance, shape or alignment.
                            A 'Dental Bridge 'may be recommended if there is missing one or more teeth. They span the space where teeth are missing.
-                            For longevity of crown and bridges, one should maintain good oral hygiene and healthy gums. For this, brushing with fluoridated toothpaste twice a day and dental flossing is advisable.. </p>
+                            For longevity of crown and bridges, one should maintain good oral hygiene and healthy gums. For this, brushing with fluoridated toothpaste twice a day and dental flossing is advisable. When seeking reliable and professional dental care, many patients turn to specialized facilities that offer <span class="fw-bold text-capitalize">fixed teeth crown and bridge treatment in beeramguda</span>. A <span class="fw-bold text-capitalize">fixed teeth crown and bridge hospital in beeramguda</span> provides comprehensive services, utilizing advanced technology and skilled practitioners to ensure optimal oral health and aesthetic results. Patients can also visit a <span class="fw-bold text-capitalize">fixed teeth crown and bridge clinic in beeramguda</span>, where they receive personalized care tailored to their unique dental needs. These clinics and hospitals are dedicated to restoring and enhancing smiles through expert crown and bridge treatments, ensuring durable and natural-looking results.                        </p>
                     </div>
                     <div class="treatment-content">
                         <p>
