--- a/full-and-partial-Dentures.html
+++ b/full-and-partial-Dentures.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3 text-capitalize">full and partial dentures services in beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">full and partial dentures services in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -46,8 +46,18 @@
 
                             <p>Replace one or several missing teeth seamlessly with our customized partial denture solutions, enhancing both aesthetics and oral health.</p> -->
 
-                            <p>At V-Smilez Dental Clinic, we provide the Full and Partial Dentures Services in Beeramguda and  prioritize your comfort and satisfaction throughout your denture journey. Our experienced team provides comprehensive pre and post-operative care, ensuring that you are well informed and supported at every step of the process. We offer personalized guidance, meticulous fittings, and post-operative adjustments to ensure your dentures fit perfectly and give you the confidence to smile brightly.</p>
-                    </div>
+                            <p>At V-Smilez Dental Clinic, we provide the <span class="fw-bold text-capitalize">Full and Partial Dentures Services in Beeramguda</span> and  prioritize your comfort and satisfaction throughout your denture journey. Our experienced team provides comprehensive pre and post-operative care, ensuring that you are well informed and supported at every step of the process. We offer personalized guidance, meticulous fittings, and post-operative adjustments to ensure your dentures fit perfectly and give you the confidence to smile brightly.</p>
+                            <p>Finding a reputable <span class="fw-bold text-capitalize">full and partial dentures hospital in Beeramguda</span> can greatly enhance your oral health and confidence. Whether you need comprehensive denture services or partial solutions, choosing a specialized clinic ensures personalized care and expertise in denture fittings and adjustments. Such clinics typically offer a range of services, including consultations, fittings, and maintenance, tailored to meet individual dental needs. By selecting a clinic known for its quality of service and patient-centric approach, you can rest assured that your dental health is in capable hands, providing you with comfort and a natural smile.
+
+
+
+
+
+
+
+
+                            </p>
+                        </div>
 
                 </div>
                 <div class="col-lg-4 pe-xl-5">
