--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3">Root Canal Treatment In Beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">root canal treatment In beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -35,7 +35,7 @@
                     </div>
                     <div class="treatment-content">
                         <p>A 'Root Canal Treatment 'is used to repair and save a tooth that is badly decayed or become infected. During root canal procedure, the infected nerve, blood vessels and pulp tissue are removed from tooth after which it is cleaned and sealed by biocompatible material.
-                        Without treatment, tissue surrounding the tooth will become infected, resulting in pus formation known 'abscess'. </p>
+                        Without treatment, tissue surrounding the tooth will become infected, resulting in pus formation known 'abscess'. If you are searching for quality dental care in Beramguda, look no further than the specialized root canal treatment options available in the area. Whether you need a <span class="fw-bold text-capitalize">root canal treatment in beeramguda</span>, or you're seeking a reputable <span class="fw-bold text-capitalize">root canal hospital in beeramguda</span>, you'll find a range of services tailored to meet your dental needs. The skilled professionals at various <span class="fw-bold text-capitalize">root canal clinic in beeramguda</span> utilize the latest technology to ensure your treatment is both effective and comfortable. With a focus on patient care and satisfaction, these clinics are committed to providing top-notch dental services, making Beramguda a prime location for anyone in need of root canal therapy. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
