--- a/dental-implants.html
+++ b/dental-implants.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3 text-capitalize">best dental  implants treatment in beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">best dental  implants treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
