--- a/teeth-cleaning-scaling-and-polishing.html
+++ b/teeth-cleaning-scaling-and-polishing.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3 text-capitalize">tooth cleaning(scaling) and polishing services in beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">tooth cleaning(scaling) and polishing services in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -43,8 +43,17 @@
                         <p>
 
                              Dental Association recommends patients to get their teeth cleaned twice a year to remain free from dental related problems. 
-                             At V-Smilez Dental Hospital, we provide  Tooth Cleaning (Scaling) and Polishing Services in Beeramguda
-                             with latest equipment's with highest level of sterilization to give our patients a good oral Health.</p>
+                             At V-Smilez Dental Hospital, we provide  <span class="fw-bold text-capitalize">Tooth Cleaning (Scaling) and Polishing Services in Beeramguda</span>
+                             with latest equipment's with highest level of sterilization to give our patients a good oral Health. <span class="fw-bold text-capitalize">Tooth cleaning (scaling) and polishing treatments in Beeramguda</span> ensure thorough removal of plaque and stains, promoting a brighter smile and healthier gums.
+                            </p>
+                             <p>If you're looking for tooth cleaning (scaling) and polishing services in Beeramguda, you have several options to consider. Beeramguda offers several hospitals and clinics where you can receive these treatments from experienced professionals. Whether you're seeking routine dental maintenance or specialized care, the <span class="fw-bold text-capitalize">best tooth cleaning (scaling) and polishing doctors in Beeramguda</span> are equipped to provide thorough and effective treatments. These clinics and hospitals prioritize dental hygiene and offer modern facilities to ensure your dental health is in good hands. Whether it's for regular check-ups or specific dental issues, Beramguda's dental professionals are committed to providing top-notch care tailored to your needs.
+
+
+
+
+
+
+                             </p>
                     </div>
 
                 </div>
