--- a/teeth-whitening.html
+++ b/teeth-whitening.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3 text-capitalize">best teeth whitening treatment in beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">best teeth whitening treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -43,8 +43,8 @@
                         <p>
 
                             Vital - performed on vital teeth having live tooth nerve.
-                             At V-Smilez Dental Clinic, we provide best Teeth Whitening Treatment in Beeramguda and also with both the types of bleaching procedures to regain your beautiful smile and rejunivate again.
-                             A Beautiful smile always makes you feel younger.</p>
+                             At V-Smilez Dental Clinic, we provide <span class="fw-bold text-capitalize">best Teeth Whitening Treatment in Beeramguda</span> and also with both the types of bleaching procedures to regain your beautiful smile and rejunivate again.
+                             A Beautiful smile always makes you feel younger. Finding a reliable <span class="fw-bold text-capitalize">teeth whitening hospital in beeramguda</span> is crucial for achieving a bright, confident smile. Whether you're searching for top-notch dental care or the <span class="fw-bold text-capitalize">best teeth whitening doctors in beeramguda</span>, it's essential to look for a clinic that offers professional services and utilizes advanced techniques. By choosing a reputable teeth whitening hospital, you can ensure that your dental needs are met with precision and care. Consider clinics that prioritize patient comfort and employ experienced dental professionals to achieve optimal results in teeth whitening treatments.</p>
                     </div>
 
                 </div>
