--- a/pediatric-dental-care.html
+++ b/pediatric-dental-care.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h1 class="title-style mb-3 text-capitalize">best pediatric dental care treatment in beeramguda</h1>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">best pediatric dental care treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -39,14 +39,10 @@
                     <div class="treatment-content">
                         <p>
 
-                            We offer services like dental cleanings, fluoride treatments, dental sealants, and orthodontic evaluations tailored to children's unique needs. Education on proper oral hygiene practices, including brushing, flossing, and diet, is also a key aspect of pediatric dental care. By promoting good oral health habits from an early age, pediatric dentists help children maintain healthy smiles and prevent future dental problems. We provide the best  Pediatric Dental Care Treatment in Beeramguda.
-
-
-
-
-
-                        </p>
-                    </div>
+                            We offer services like dental cleanings, fluoride treatments, dental sealants, and orthodontic evaluations tailored to children's unique needs. Education on proper oral hygiene practices, including brushing, flossing, and diet, is also a key aspect of pediatric dental care. By promoting good oral health habits from an early age, pediatric dentists help children maintain healthy smiles and prevent future dental problems. We provide the <span class="fw-bold text-capitalize">best  Pediatric Dental Care Treatment in Beeramguda</span>. </p>
+                    <p>Looking for the <span class="fw-bold text-capitalize">best pediatric dental care hospital in Beeramguda</span>? Look no further! Our hospital is renowned for providing exceptional care for children's dental needs. With a team of <span class="fw-bold text-capitalize">best pediatric dental care doctors in beeramguda</span> dedicated to ensuring your child's oral health, we prioritize gentle and compassionate treatment in a child-friendly environment. Our hospital is equipped with state-of-the-art facilities to handle everything from routine check-ups to specialized treatments, ensuring that every child receives personalized care. Trust us to deliver the best pediatric dental care in Beeramguda, where your child's smile is our priority.</p>
+                    
+                        </div>
 
                 </div>
                 <div class="col-lg-4 pe-xl-5">
