--- a/pregnancy-guidance.html
+++ b/pregnancy-guidance.html
@@ -34,13 +34,14 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>At V-Smilez Dental Clinic, We understand that pregnancy is the most enjoyable time in the women's life, we believe to make it more enjoyable by helping you maintain you're oral health giving you relief from dental problems by taking care not to harm the little angel.</p>
+                        <p>At V-Smilez Dental Clinic, We understand that pregnancy is the most enjoyable time in the women's life, we believe to make it more enjoyable by helping you maintain you're oral health giving you relief from dental problems by taking care not to harm the little angel. Finding the <span class="fw-bold text-capitalize">best pregnancy guidance dental care treatment in Beeramguda</span> involves searching for hospitals or clinics that specialize in prenatal dental care. It's essential for expectant mothers to receive regular dental check-ups and treatments that are safe during pregnancy. These facilities should offer comprehensive services tailored to the specific needs of pregnant women, ensuring that any dental issues are addressed without compromising the health of the mother or baby. Seek clinics with experienced professionals who understand the importance of oral health during pregnancy and can provide personalized care and guidance. Checking reviews and recommendations from other expectant mothers can also help in finding a trusted facility for <span class="fw-bold text-capitalize">pregnancy guidance dental care hospital in Beeramguda</span>.                        </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            We provide complete guidance on maintaining good oral hygiene during pregnancy as your oral health can affect baby's general health as well as oral health.</p>
-                    </div>
+                            We provide complete guidance on maintaining good oral hygiene during pregnancy as your oral health can affect baby's general health as well as oral health. When it comes to pregnancy, dental care is crucial for both the mother's health and the baby's development. Finding the <span class="fw-bold text-capitalize">best pregnancy guidance dental care doctors in Beeramguda</span> ensures comprehensive oral health support during this sensitive time. These specialists provide tailored treatments that prioritize the unique needs of pregnant women, addressing issues such as gum disease and oral infections that can impact overall health. Regular dental check-ups and proper oral hygiene education are essential to maintaining a healthy mouth throughout pregnancy, promoting overall well-being for both mother and child. It's advisable to consult with trusted healthcare providers who specialize in prenatal dental care to ensure optimal oral health during pregnancy.                        </p>
+                   
+                        </div>
 
                 </div>
                 <div class="col-lg-4 pe-xl-5">
